--- a/src/app/dashboard/layout-creoter/menu.component.html
+++ b/src/app/dashboard/layout-creoter/menu.component.html
@@ -1,17 +1,17 @@
 <aside>
   <a [routerLink]="['product-management']" >
     <i class="fa fa-laptop" aria-hidden="true"></i>
-    Product Management  </a>
+    {{'dSidebar.pm' | transloco}}  </a>
   <a [routerLink]="['order-management']">
     <i class="fa fa-clone" aria-hidden="true"></i>
-    Order Management
+    {{'dSidebar.om' | transloco}}
   </a>
   <a [routerLink]="['reporting']">
     <i class="fa fa-star-o" aria-hidden="true"></i>
-    Reporting
+    {{'dSidebar.rpt' | transloco}}
   </a>
   <a [routerLink]="['profil-management']">
     <i class="fa fa-trash-o" aria-hidden="true"></i>
-    Profil Management
+    {{'dSidebar.ps' | transloco}}
   </a>
 </aside>
