--- a/src/app/dashboard/components/product-management/get-product/get-product.component.html
+++ b/src/app/dashboard/components/product-management/get-product/get-product.component.html
@@ -8,7 +8,6 @@
       [showCurrentPageReport]="true"
       [rowsPerPageOptions]="[5, 10, 20]"
       [paginator]="true"
-      currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
       [globalFilterFields]="[
         'name',
         'product.price',
@@ -25,10 +24,10 @@
             <div>
               <span class="button-style">
                 <button
-                  class="button"
+                  class="button border-round"
                   [routerLink]="['/creoter/product-management', 'add-product']"
                 >
-                  <i class="pi pi-plus" style="color: white"></i> Ekle
+                  <i class="pi pi-plus" style="color: white"></i> {{'dGetProduct.add' | transloco}}
                 </button>
               </span>
             </div>
@@ -50,15 +49,15 @@
       </ng-template>
       <ng-template pTemplate="header">
         <tr>
-          <th style="width: 10%">id</th>
-          <th style="width: 10%">Name</th>
-          <th style="width: 10%">Image</th>
-          <th style="width: 10%">Price</th>
-          <th style="width: 10%">Quantity</th>
-          <th style="width: 10%">Status</th>
-          <th style="width: 10%">Category</th>
-          <th style="width: 10%">Marka Adı</th>
-          <th style="width: 10%">İşlemler</th>
+          <th style="width: 10%">{{'dGetProduct.id' | transloco}}</th>
+          <th style="width: 10%">{{'dGetProduct.name' | transloco}}</th>
+          <th style="width: 10%">{{'dGetProduct.img' | transloco}}</th>
+          <th style="width: 10%">{{'dGetProduct.price' | transloco}}</th>
+          <th style="width: 10%">{{'dGetProduct.quantity' | transloco}}</th>
+          <th style="width: 10%">{{'dGetProduct.status' | transloco}}</th>
+          <th style="width: 10%">{{'dGetProduct.category' | transloco}}</th>
+          <th style="width: 10%">{{'dGetProduct.companyName' | transloco}}</th>
+          <th style="width: 10%">{{'dGetProduct.actions' | transloco}}</th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-product>
@@ -93,14 +92,14 @@
               <div>
                 <span class="button-style">
                   <button pButton class="button" [routerLink]="['/creoter/product-management','update-product' , product.id]">
-                    <i class="pi pi-pencil" style="color: white"></i> Düzenle
+                    <i class="pi pi-pencil mr-1" style="color: white"></i> {{'dGetProduct.update' | transloco}}
                   </button>
                 </span>
               </div>
               <div>
                 <span class="button-style" style="margin-left: 5px">
                   <button pButton class="button" (click)="deleteProduct(product.id)">
-                    <i class="pi pi-trash" style="color: white"></i> Sil
+                    <i class="pi pi-trash mr-1" style="color: white"></i> {{'dGetProduct.delete' | transloco}}
                   </button>
                 </span>
               </div>
@@ -110,7 +109,7 @@
       </ng-template>
       <ng-template pTemplate="emptymessage">
         <tr>
-          <td colspan="5">No products found.</td>
+          <td colspan="5">{{'dGetProduct.notFound' | transloco}}</td>
         </tr>
       </ng-template>
     </p-table>
