--- a/src/app/pages/components/loading/loading.component.html
+++ b/src/app/pages/components/loading/loading.component.html
@@ -1,4 +1,4 @@
 <div class="loading-spinner">
   <div class="spinner"></div>
-  <p>Lütfen bekleyin...</p>
+  <p>{{'pleaseWait' | transloco}}</p>
 </div>
