--- a/src/app/dashboard/components/orders-management/get-orders/get-orders.component.scss
+++ b/src/app/dashboard/components/orders-management/get-orders/get-orders.component.scss
@@ -38,6 +38,7 @@ background: white;
   /* Sipariş öğeleri stili */
   .order-item {
     margin: 10px;
+    margin-bottom: 50px;
     /* Sipariş bilgileri stili */
     .order-info {
       div {
