--- a/src/app/dashboard/components/product-management/addproduct-form/addproduct-form.component.html
+++ b/src/app/dashboard/components/product-management/addproduct-form/addproduct-form.component.html
@@ -1,5 +1,5 @@
 
-<div class="bg-white p-4 w-full">
+<div class=" container bg-white p-4 ">
   <form [formGroup]="addproductForm">
     <div class="flex w-full align-items-center justify-content-center">
       <h4>{{'dAddProduct.header' | transloco}}</h4>
