--- a/src/app/dashboard/components/product-management/addproduct-form/addproduct-form.component.scss
+++ b/src/app/dashboard/components/product-management/addproduct-form/addproduct-form.component.scss
@@ -4,9 +4,14 @@ $danger-color: #e74c3c;
 $dark-text: #34495e;
 $light-text: #ecf0f1;
 $background-color: #ecf0f1;
+
+.container{
+  width: 100%;
+}
 form {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 .wrapper {
   display: flex;
@@ -43,7 +48,7 @@ form {
   button {
     width: 100%;
     padding: 15px;
-    background-color: $primary-color;
+    background-color:$dark-text;
     color: $light-text;
     font-size: 1rem;
     border: none;
@@ -51,9 +56,7 @@ form {
     cursor: pointer;
     transition: background-color 0.3s;
 
-    &:hover {
-      background-color: $secondary-color;
-    }
+
   }
 }
 
