--- a/src/app/dashboard/components/product-management/product-management.component.html
+++ b/src/app/dashboard/components/product-management/product-management.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="product-body">
     <div class="product-list">
+      <p-toast></p-toast>
       <router-outlet></router-outlet>
     </div>
   </div>
