--- a/src/app/dashboard/layout-creoter/topbar.component.html
+++ b/src/app/dashboard/layout-creoter/topbar.component.html
@@ -6,15 +6,17 @@
   <button #menubutton class="p-link layout-menu-button layout-topbar-button" (click)="layoutService.onMenuToggle()">
       <i class="pi pi-bars"></i>
   </button>
+  <div class="w-full flex justify-content-center align-content-center">
+    <h3>{{'topbar.header' | transloco}}</h3>
+  </div>
   <button #topbarmenubutton class="p-link layout-topbar-menu-button layout-topbar-button" (click)="layoutService.showProfileSidebar()">
       <i class="pi pi-ellipsis-v"></i>
   </button>
-  <div #topbarmenu class="layout-topbar-menu" [ngClass]="{'layout-topbar-menu-mobile-active': layoutService.state.profileSidebarVisible}">
-      <button class="p-link layout-topbar-button">
-          <i class="pi pi-user"></i>
-      </button>
-  </div>
-  <select (change)="setLanguage()" [(ngModel)]="selectedLanguage" class="custom-select flex border-0 text-lg ml-3">
+  <a class="logout" (click)="logout()">
+    <i class="pi pi-sign-out mr-1 text-lg" ></i>
+    <span>{{'topbar.logout' | transloco}}</span>
+</a>
+  <select (change)="setLanguage()" [(ngModel)]="selectedLanguage" class="custom-select flex border-0  ml-3">
     <option *ngFor="let option of stateOptions" [ngValue]="option.value">{{ option.label }}</option>
   </select>
 </div>
